<resources>
    <string name="app_name">Nightlife</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">First Fragment</string>
    <string name="home_fragment_label">Second Fragment</string>
    <string name="next">Log in</string>
    <string name="previous">Log out</string>
    <string name="see_events_button">Events</string>

    <string name="add_event_title">Add Event</string>

    <string name="hello_first_fragment">Please log in</string>
    <string name="hello_second_fragment">Welcome! Log-in successful %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Events in your area</string>
    <string name="email_label_hint">email</string>
    <string name="email">Email..</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- Preference Titles -->
    <string name="theme">Theme</string>
    <string name="account">Account</string>

    <!-- Theme Preferences -->
    <string name="dark_mode">Dark Mode</string>
    <string name="reply_title">Default reply action</string>

    <!-- Account Preferences -->
    <string name="change_name">Change Username</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="map">map</string>
    <string name="Add">addeventbutton</string>
    <string name="address">Address</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title">Title</string>
    <string name="add_event_button">Add event</string>
    <string name="map_view">Map view</string>
    <string name="delete">Delete</string>
    <string name="login_with_code">Login with code</string>
    <string name="EventLink">Event link</string>
    <string name="event_page">Event Page</string>
    <string name="textview">TextView</string>
    <string name="userstext">UsersText</string>

</resources>